[package]
name = "rs-song-request-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = "3"
actix-web-actors = "3"

bytes = "0.5"
byteorder = "1.3"
derive_more = "0.99.14"
log = "0.4.14"
env_logger = "0.8"
futures = "0.3"
rand = "0.7"
serde = "1.0.126"
serde_json = "1"
